--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
@@ -10,7 +11,11 @@
     "mockman-js": "^1.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.3",
+    "toastify": "^2.0.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
