--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "emoji-picker-react": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.44",
     "mockman-js": "^1.1.5",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-quill": "^1.3.5",
