--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -12,13 +12,15 @@
     "mockman-js": "^1.1.5",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-quill": "^1.3.5",
     "react-quill-emoji": "^0.1.9",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
+    "redux": "^4.2.0",
     "toastify": "^2.0.1",
     "uuid": "^8.3.2"
   },
