--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "emoji-mart": "^5.1.0",
     "emoji-picker-react": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
@@ -14,6 +16,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-input-emoji": "^4.1.0",
     "react-quill": "^1.3.5",
     "react-quill-emoji": "^0.1.9",
     "react-redux": "^8.0.2",
