--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "daisyui": "^2.19.0",
     "dayjs": "^1.11.2",
     "emoji-mart": "^5.1.0",
     "emoji-picker-react": "^3.5.1",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.1.6"
   }
 }
