--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -13,13 +13,9 @@
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.44",
     "mockman-js": "^1.1.5",
-    "quill-image-resize": "^3.0.9",
-    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
-    "react-input-emoji": "^4.1.0",
-    "react-quill": "^1.3.5",
-    "react-quill-emoji": "^0.1.9",
+    "react-hot-toast": "^2.3.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
