--- a/slate-social-media/package.json
+++ b/slate-social-media/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "daisyui": "^2.19.0",
@@ -46,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.8"
   }
 }
